# src/auth/entities/auth.entity.ts
@@ -1,5 +1,5 @@
 // src/auth/entities/auth.entity.ts
-import { Entity, PrimaryKey, Property, ManyToOne, OneToOne } from '@mikro-orm/core';
+import { Entity, PrimaryKey, Property, OneToOne } from '@mikro-orm/core';
 import { Funcionario } from '../../colaborador/entities/funcionario.entity';
 import { Gestao } from '../../gestor/entities/gestor.entity';
 
@@ -14,15 +14,21 @@ export class Auth {
   @Property()
   password: string;
 
+  @Property({ nullable: true }) // Token de acesso (opcional)
+  accessToken?: string;
+
+  @Property({ nullable: true }) // Data de expiração do token (opcional)
+  tokenExpiresAt?: Date;
+
   @Property()
   role: string; // 'funcionario' ou 'gestor'
 
-  @OneToOne(() => Funcionario, (funcionario) => funcionario.auth) // Lado inverso
+  @OneToOne(() => Funcionario, (funcionario) => funcionario.auth, { nullable: true }) // Campo funcionario é opcional
   funcionario?: Funcionario;
 
-  @OneToOne(() => Gestao, (gestao) => gestao.auth) // Lado inverso
+  @OneToOne(() => Gestao, (gestao) => gestao.auth, { nullable: true }) // Campo gestao é opcional
   gestao?: Gestao;
-  
+
   @Property()
   createdAt: Date = new Date();
 
